--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,10 @@
-.cardTabs {
-
-}
-
 .nextButton {
   margin-top: 50px;
 }
 
 .term, .definition {
   margin: 20px 0 0 20px;
+  font-size: 20px;
 }
 
 .definition {
@@ -17,4 +14,93 @@
 .nb-brand {
   font-weight: bold;
   font-size: 30px;
+}
+
+li {
+  list-style-type: none;
+  margin: 20px;
+}
+
+a {
+  color: black;
+}
+
+a:hover {
+  text-decoration: none;
+  font-weight: bold;
+  color: #80256F;
+}
+
+.nb {
+  background-color: #CC3BB1;
+  background-image: none;
+  background-repeat: no-repeat;
+}
+
+.navbar-light .navbar-brand {
+  color: white;
+}
+
+.navbar-light .navbar-toggler {
+  border-color: white;
+}
+
+.navbar-light .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 0.9)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: white;
+}
+
+.navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
+    color: #FFFC66;
+}
+
+.navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
+    color: #FFFC66;
+}
+
+label {
+  margin-right: 10px;
+}
+
+input {
+  margin-right: 10px;
+}
+
+.testimonial {
+  margin-top: 50px;
+}
+
+.homeLinks {
+  margin-top: 40px;
+}
+
+.homeButtonLink {
+  background-color: white;
+  color: black;
+  font-size: 20px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+#cardListTitle {
+  margin-top: 20px;
+}
+
+#goHomeButton {
+  margin-right: 10px;
+}
+
+#testRandomBlock {
+  margin-top: 20px;
+}
+
+.testButtons {
+  margin-top: 20px;
+}
+
+#seeDefButton {
+  margin-right: 10px;
 }
